# crm-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: test.yml
apps/analytics/: urls.py  views.py
apps/analytics/templates/: dashboard.html
apps/base/: urls.py  views.py
apps/base/templatetags/: email_tags.py  message_tags.py
apps/common/: managers.py  mixins.py  tests.py  validators.py  widgets.py
apps/common/templates/buttons/: danger.html  danger_link.html  primary.html  primary_link.html  secondary.html  secondary_link.html  text_button.html  text_link.html
apps/common/templates/forms/: select.html  (+10 more)
apps/common/tests/: test_mixins.py  test_validators.py
apps/security/: admin.py  apps.py  forms.py  signals.py  urls.py  views.py
apps/users/: admin.py  filters.py  forms.py  managers.py  models.py  tests.py  validators.py
apps/users/migrations/: 0001_initial.py
config/: celery.py  constants.py  context_processors.py  urls.py
config/formats/en/: formats.py
config/settings/: __init__.py  base.py  dev.py  prod.py
static/css/: base.css  output.css  variables.css
static/js/: animations.js  constants.js
static/js/favicon/: switch-favicon.js
templates/: base.html
templates/components/footer/: footer.html
templates/components/messages/: container.html  icon.html  message.html
templates/components/navbar/: desktop.html  menu.html  mobile.html  navbar.html
templates/layouts/: app.html  auth.html  error.html
(+35 files in other folders)
