[project]
name = "crm-system"
version = "0.1.0"
authors = [{name = "Luis Abhram Mata", email = "luisabhram@gmail.com"}]
description = "A comprehensive customer relationship management (CRM) system built with Django."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.8",
    "django-unfold>=0.72.0",
    "python-decouple>=3.8",
]
